Fixed spacing issues around buttons and h3 elements.

--- a/sbsm-admin-app/src/components/Buttons/styles.module.css
+++ b/sbsm-admin-app/src/components/Buttons/styles.module.css
@@ -14,4 +14,5 @@
   max-width: 60vw;
   min-width: 45vw;
   width: fit-content;
+  margin-left: 1rem;
 }
