--- a/sbsm-admin-app/src/pages/StudentProfile/styles.module.css
+++ b/sbsm-admin-app/src/pages/StudentProfile/styles.module.css
@@ -7,8 +7,12 @@
 .buttonWrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   text-align: center;
   width: 100vw;
   border-bottom: 1px solid #EFEFEF;
+}
+
+.buttonWrapper h3 {
+  margin-right: 1rem;
 }
